test/libyul/yulSyntaxTests/switch_invalid_case.yul
{
    switch 42
    case mul(1, 2) {}
    case 2 {}
    default {}
}
// ----
// ParserError 4805: (28-29): Literal expected.
